<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manfred</string>
    <string name="title_activity_home">Manfred</string>
    <string name="action_settings">Settings</string>
    <string name="home_play">PLAY</string>
    <string name="home_settings">SETTINGS</string>
    <string name="saves_screen_logo">Saves</string>
    <string name="start_new">Start New Game</string>
    <string name="pref_sound">Sound</string>
    <string name="pref_sound_summ">Turn on sounds in the game.</string>
    <string name="pref_animation">Animation</string>
    <string name="pref_animation_summ">Turn on animations in the game.</string>
    <string name="pref_delays">Easy Mode</string>
    <string name="pref_delays_summ">Remove all delays.</string>
    <string name="eat_button">Eat</string>
    <string name="exercise_button">Exercise</string>
    <string name="sleep_button">Sleep</string>
    <string name="title_activity_actions">ActionsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_log">MainActivity</string>
    <string name="name_placeholder">Name of Manfred</string>
    <string name="last_saved">Last Saved: </string>
    <string name="last_modified_placeholder">Last Modified</string>
    <string name="name_your_manfred">Name your Manfred</string>
    <string name="saves_popup_play">Play</string>
    <string name="saves_popup_close">Back</string>
    <string name="enter_name_message">Enter name here.</string>
    <string name="detail_screen_logo">Manfred</string>
    <string name="your_current_manfred">Your current Manfred picture</string>
    <string name="actions_description">OPEN THESE MENUS TO CHOOSE WHAT MANFRED DOES NEXT.</string>
    <string name="manfred_description">TOUCH MANFRED TO SEE STATS ON HIS CURRENT HEALTH.</string>
    <string name="log_description">KEEP UP WITH MANFRED HERE. TOUCH THE ARROW TO VIEW THE FULL LOG.</string>
    <string name="start_playing">START PLAYING</string>

</resources>
