<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:padding="6dip"
    android:background="@color/button_blue">



    <TextView
        android:id="@+id/last_saved"
        android:layout_width="wrap_content"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:text="@string/last_saved"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/firstLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/last_saved"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toLeftOf="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/name_placeholder"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/secondLine"
        android:layout_height="26dip"
        android:layout_width="wrap_content"
        android:layout_below="@id/firstLine"
        android:layout_toRightOf="@id/last_saved"
        android:text="@string/last_modified_placeholder"
        android:textSize="12sp"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:src="@drawable/manfred1" />

</RelativeLayout> 