<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/manfred_logo"
        android:text="@string/app_name"
        android:textSize="@dimen/title"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingTop="50dp"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent" />

    <ImageView
        android:id="@+id/manfred_home_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/manfred5"
        android:layout_below="@+id/manfred_logo"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/home_play_button"
        android:layout_height="45dp"
        android:layout_width="135dp"
        android:layout_below="@+id/manfred_home_picture"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@color/button_blue"
        android:textColor="@color/black"
        android:text="@string/home_play"
        android:onClick="playButtonClicked"/>

    <Button
        android:id="@+id/home_settings_button"
        android:layout_height="45dp"
        android:layout_width="135dp"
        android:layout_below="@+id/home_play_button"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@color/button_blue"
        android:textColor="@color/black"
        android:text="@string/home_settings"
        android:onClick="settingsButtonClicked"/>

</RelativeLayout>